--- a/package.json
+++ b/package.json
@@ -21,10 +21,7 @@
     "body-parser": "1.18.3",
     "cors": "2.8.5",
     "express": "^4.16.4",
-    "hostenv": "1.0.6",
-    "superagent": "^4.0.0",
-    "validator": "^10.9.0",
-    "vd": "^0.8.2"
+    "superagent": "^4.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
@@ -33,13 +30,10 @@
     "@babel/preset-react": "^7.0.0",
     "all-contributors-cli": "^5.4.1",
     "babel-core": "^7.0.0-bridge.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.7.0",
     "eslint": "^5.9.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "immutable": "^4.0.0-rc.12",
     "prettier": "^1.15.2",
     "serverless": "^1.33.2",
     "serverless-api-cloudfront": "^0.9.4"
