--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -37,7 +37,8 @@
       "profile": "http://emmanuel.ogbizi.com",
       "contributions": [
         "review",
-        "code"
+        "code",
+        "infra"
       ]
     }
   ],
